00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: privacy-stack
  labels:
    name: privacy-stack
    purpose: privacy-focused-services
